[package]
name = "hbackup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
zstd = "0.13"
tar = "0.4"
walkdir = "2"
indicatif = "0.17"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
dirs = "5"
